syntax = "proto3";

import "Protos/Common/common.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
option csharp_namespace = "Account.API";

package account;
//user login service
service LoginService {
  rpc Login (LoginRequest) returns (LoginResponse); 
}
//user CRUD service
service UserService {
  rpc RegisterUser (RegisterRequest) returns (common.Response); 
  rpc UpdateUser (UpdateRequest) returns (common.Response); 
  rpc DeleteUser (common.Request) returns (common.Response); 
  rpc ChangePassword (ChangePasswordRequest) returns (common.Response); 
  rpc GetUserInfo (common.Request) returns (UserInfoResponse); 
  rpc GetAllUsers (common.Empty) returns (UserList);
}
 //service for retrieving entities related to user and necessary for user creation and modification
service UserRelatedInfoService {
  rpc GetAllCountries (common.Empty) returns (CountryList);
}

message LoginRequest {
  google.protobuf.StringValue email = 1;
  google.protobuf.StringValue password = 2;
}

message LoginResponse {
  int64 id = 1;
  string email = 2;
  bool noUser = 4;
}

message ChangePasswordRequest {
	int64 id = 1;
	google.protobuf.StringValue password = 2;
}

message RegisterRequest {
  google.protobuf.StringValue firstName = 1;
  google.protobuf.StringValue lastName = 2;
  google.protobuf.StringValue email = 3;
  google.protobuf.StringValue password = 4;
  google.protobuf.Timestamp DateOfBirthTimeStamp = 5;
  google.protobuf.Int32Value gender = 6;
  google.protobuf.Int64Value countryId = 7;
}
message UpdateRequest {
  int64 id = 1;
  google.protobuf.StringValue firstName = 2;
  google.protobuf.StringValue lastName = 3;
  google.protobuf.StringValue email = 4;
  google.protobuf.StringValue phoneNumber = 5;
  google.protobuf.Timestamp DateOfBirthTimeStamp = 6;
  google.protobuf.Int32Value gender = 7;
  google.protobuf.StringValue address = 8;
  google.protobuf.Int64Value countryId = 9;
  google.protobuf.StringValue userInfo = 10;
}

message Country {
    int64 id = 1;
   string name = 2;
}
message CountryList {
    repeated Country items = 1;
}

message UserInfoResponse {
    int64 id = 1;
    string firstName = 2;
    string lastName = 3;
    string email = 4;
    google.protobuf.StringValue phoneNumber = 5;
    google.protobuf.Timestamp DateOfBirthTimeStamp = 6;
    google.protobuf.Timestamp RegistrationDateTimeStamp = 7;
    int32 gender = 8;
    google.protobuf.StringValue address = 9;
    int64 countryId = 10;
    google.protobuf.StringValue countryName = 11;
    google.protobuf.StringValue userInfo = 12;
    google.protobuf.BytesValue profilePhoto = 13;
    google.protobuf.StringValue mimeType = 14;
    bool NoUser = 15;
}

message UserList {
    repeated UserInfoResponse items = 1;
}



